--- a/roles/common/templates/etc_ssh_sshd_config.j2
+++ b/roles/common/templates/etc_ssh_sshd_config.j2
@@ -25,7 +25,7 @@ LogLevel INFO
 
 # Authentication:
 LoginGraceTime 120
-PermitRootLogin no
+PermitRootLogin yes
 StrictModes yes
 
 RSAAuthentication yes
