--- a/roles/mailserver/templates/etc_postfix_main.cf.j2
+++ b/roles/mailserver/templates/etc_postfix_main.cf.j2
@@ -101,7 +101,7 @@ virtual_alias_maps = pgsql:/etc/postfix/pgsql-virtual-alias-maps.cf
 local_recipient_maps = $virtual_mailbox_maps
 
 # Milters: Rspamd
-smtpd_milters = inet:127.0.0.1:11332
+smtpd_milters = inet:127.0.0.1:11332 unix:/var/spool/postfix/spamass/spamass.sock
 non_smtpd_milters = $smtpd_milters
 milter_protocol = 6
 milter_mail_macros = i {mail_addr} {client_addr} {client_name} {auth_authen} {auth_type}
