--- a/roles/mailserver/templates/etc_postfix_main.cf.j2
+++ b/roles/mailserver/templates/etc_postfix_main.cf.j2
@@ -95,9 +95,12 @@ virtual_transport = lmtp:unix:private/dovecot-lmtp
 mailbox_transport = lmtp:unix:private/dovecot-lmtp
 
 dovecot_destination_recipient_limit = 1
-virtual_mailbox_domains = pgsql:/etc/postfix/pgsql-virtual-mailbox-domains.cf
-virtual_mailbox_maps = pgsql:/etc/postfix/pgsql-virtual-mailbox-maps.cf
-virtual_alias_maps = pgsql:/etc/postfix/pgsql-virtual-alias-maps.cf
+
+relay_domains = $mydestination, proxy:pgsql:/etc/postfix/pgsql-relay-domains.cf
+virtual_alias_maps = proxy:pgsql:/etc/postfix/pgsql-virtual-alias-maps.cf
+virtual_mailbox_domains = proxy:pgsql:/etc/postfix/pgsql-virtual-domains-maps.cf
+virtual_mailbox_maps = proxy:pgsql:/etc/postfix/pgsql-virtual-mailbox-maps.cf
+
 local_recipient_maps = $virtual_mailbox_maps
 
 # Milters: Rspamd
