--- a/roles/mailserver/templates/etc_postfix_pgsql-relay-domains.cf.j2
+++ b/roles/mailserver/templates/etc_postfix_pgsql-relay-domains.cf.j2
@@ -2,4 +2,4 @@ user = {{ mail_db_username }}
 password = {{ mail_db_password }}
 hosts = localhost
 dbname = {{ mail_db_database }}
-query = SELECT goto FROM alias WHERE address='%s' AND active = true
+query = SELECT domain FROM domain WHERE domain='%s' and backupmx = true
