--- a/roles/mailserver/templates/etc_postfix_pgsql-virtual-mailbox-limits.cf.j2
+++ b/roles/mailserver/templates/etc_postfix_pgsql-virtual-mailbox-limits.cf.j2
@@ -1,5 +1,6 @@
+# Used for quota
 user = {{ mail_db_username }}
 password = {{ mail_db_password }}
 hosts = localhost
 dbname = {{ mail_db_database }}
-query = SELECT goto FROM alias WHERE address='%s' AND active = true
+query = SELECT quota FROM mailbox WHERE username='%s'
