--- a/roles/mailserver/templates/etc_postfix_main.cf.j2
+++ b/roles/mailserver/templates/etc_postfix_main.cf.j2
@@ -99,12 +99,13 @@ dovecot_destination_recipient_limit = 1
 relay_domains = $mydestination, proxy:pgsql:/etc/postfix/pgsql-relay-domains.cf
 virtual_alias_maps = proxy:pgsql:/etc/postfix/pgsql-virtual-alias-maps.cf
 virtual_mailbox_domains = proxy:pgsql:/etc/postfix/pgsql-virtual-domains-maps.cf
-virtual_mailbox_maps = proxy:pgsql:/etc/postfix/pgsql-virtual-mailbox-maps.cf
+virtual_mailbox_maps = hash:/var/lib/mailman3/data/postfix_lmtp proxy:pgsql:/etc/postfix/pgsql-virtual-mailbox-maps.cf
 
 local_recipient_maps = $virtual_mailbox_maps
+transport_maps = hash:/var/lib/mailman3/data/postfix_lmtp
 
 # Milters: Rspamd
-smtpd_milters = inet:127.0.0.1:11332 unix:/var/spool/postfix/spamass/spamass.sock
+smtpd_milters = inet:127.0.0.1:11332
 non_smtpd_milters = $smtpd_milters
 milter_protocol = 6
 milter_mail_macros = i {mail_addr} {client_addr} {client_name} {auth_authen} {auth_type}
