roundcube config changes

--- a/roles/webmail/templates/var_www_roundcube_config_config.inc.j2
+++ b/roles/webmail/templates/var_www_roundcube_config_config.inc.j2
@@ -83,6 +83,7 @@ $config['plugins'] = array(
     'managesieve',
     'twofactor_gauthenticator',
     'carddav',
+    'password',
 );
 
 // skin name: folder from skins/
